// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-responsive-table Complex Head Rows 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light m--has-multiple-head-row"
    >
      <tr>
        <th
          class=""
          id="forlderSpacingColumn-idTable"
          rowspan="2"
          scope="col"
          style="background: rgb(255, 255, 255);"
        >
          <div />
        </th>
        <th
          class=""
          colspan="4"
          id="forlderAColumn-idTable"
          scope="col"
        >
          <div>
            Folder A
          </div>
        </th>
        <th
          class=""
          colspan="4"
          id="forlderBColumn-idTable"
          scope="col"
        >
          <div>
            Folder B
          </div>
        </th>
      </tr>
      <tr>
        <th
          class=""
          colspan="2"
          id="beforeForlderAColumn-idTable"
          scope="col"
        >
          <div>
            Before
          </div>
        </th>
        <th
          class=""
          colspan="2"
          id="afterForlderAColumn-idTable"
          scope="col"
        >
          <div>
            After
          </div>
        </th>
        <th
          class=""
          colspan="2"
          id="beforeForlderBColumn-idTable"
          scope="col"
        >
          <div>
            Before
          </div>
        </th>
        <th
          class=""
          colspan="2"
          id="afterForlderBColumn-idTable"
          scope="col"
        >
          <div>
            After
          </div>
        </th>
      </tr>
      <tr>
        <th
          class=""
          id="userNaidmeBeforeFolderA-idTable"
          scope="col"
        >
          <div>
            Id
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userNameBeforeFolderA-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                User Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userBeforeFolderA-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userNameAfterFolderA-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                User Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userAfterFolderA-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userNameBeforeFolderB-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                User Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userBeforeFolderB-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userNameAfterFolderB-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                User Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="userAfterFolderB-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <td
          class="m-table-group__cell"
          style="width: 120px;"
        >
          
                                01
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                simon-test
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Simons
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                simon.ca
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Simon
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                test.simon
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Simone
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                simon-com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Simon
                            
        </td>
      </tr>
      <tr>
        <td
          class="m-table-group__cell"
          style="width: 120px;"
        >
          
                                02
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                20-100
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Vincen
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                _vincent
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Vincent
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                test.vincent
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                VINcent
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent_g
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Vincent
                            
        </td>
      </tr>
      <tr>
        <td
          class="m-table-group__cell"
          style="width: 120px;"
        >
          
                                03
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                maxime-ber
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                maxime
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                maxim.ca
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Maxim
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                max.max
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                MAXime
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                maxim.ber
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Maxime
                            
        </td>
      </tr>
      <tr>
        <td
          class="m-table-group__cell"
          style="width: 120px;"
        >
          
                                04
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                frankD
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Frank
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                frank.ca
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Francois
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                JF
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Jean
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                JFrancois
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Francois
                            
        </td>
      </tr>
      <tr>
        <td
          class="m-table-group__cell"
          style="width: 120px;"
        >
          
                                05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Will.B
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                Will
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                simon.ca
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                William
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                b.will
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                willy
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                william.b
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                William
                            
        </td>
      </tr>
      <tr>
        <td
          class="m-table-group__cell"
          style="width: 120px;"
        >
          
                                06
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                johny_02
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                john
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                john-02
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                John
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                02.jo
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                John
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                jo.02
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                John
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table Row Groups With Accordion 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div>
            Name
          </div>
        </th>
        <th
          class="m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div>
            Id
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div>
            Date of birth
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div>
            Phone number
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
            style="width: 100%;"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-open m--is-large"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Group #1
              </div>
            </div>
          </div>
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
            style="width: 100%;"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-large"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Group #2
              </div>
            </div>
          </div>
        </th>
      </tr>
       
      <!---->
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table Row Groups With Header 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div>
            Name
          </div>
        </th>
        <th
          class="m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div>
            Id
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div>
            Date of birth
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div>
            Phone number
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
            style="width: 100%;"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Group #1
              </div>
            </div>
          </div>
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
            style="width: 100%;"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Group #2
              </div>
            </div>
          </div>
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
            style="width: 100%;"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Group #3
              </div>
            </div>
          </div>
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table Row Groups With Header Cell 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div>
            Name
          </div>
        </th>
        <th
          class="m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div>
            Id
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div>
            Date of birth
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div>
            Phone number
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th>
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Group #1
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-center"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                Identification
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-borders"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th>
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Group #2
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-center"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                Identification
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table Sandbox 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-dark"
    >
      <tr>
        <th
          class="m--is-sortable m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-dark m--has-ripple m--is-sort-asc"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Id
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-dark m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Email
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-dark m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Date of birth
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-dark m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Phone number
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-dark m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
          colspan="5"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <div>
                Title
              </div>
               
              <div>
                Professor's name
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
        tabindex="0"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-open m--is-large add-class-to-icon"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                ANI-1101
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                Motion design
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--is-disabled m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-disabled m--has-accordion m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <span
              class="m-plus m-table-group-header__accordion-icon m--is-skin-current-color m--is-disabled m--is-large"
            />
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1103
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design I
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <!---->
    </tbody>
    <tbody
      class="m-table-group m--has-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <tr
        class="m-table-group-header m-table-group__header m--is-accordion-icon-position-left m--is-group-header-style-light"
      >
        <th
          class="m--is-text-align-left"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                DES-1104
              </div>
            </div>
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          colspan="4"
        >
          <div
            class="m-table-group-header__cell"
          >
            <!---->
             
            <div
              class="m-table-group-header__content-cell"
            >
              <!---->
               
              <div>
                User experience design II
              </div>
            </div>
          </div>
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
        <th>
          <!---->
        </th>
      </tr>
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table Sortable 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sortable m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Name
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-sort-asc"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Id
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Email
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Date of birth
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
        <th
          class="m--is-sortable m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div
            class="m-table-head__cell"
          >
            <div
              class="m-table-head__cell-content"
            >
              <div>
                Phone number
              </div>
               
              <button
                class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
                style="width: 14px; height: 14px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table Table With Data 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div>
            Name
          </div>
        </th>
        <th
          class="m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div>
            Id
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div>
            Date of birth
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div>
            Phone number
          </div>
        </th>
      </tr>
    </thead>
     
    <!---->
     
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;

exports[`Storyshots modul-components|m-responsive-table Waiting 1`] = `
<mpo-defilement-horizontal-automatique
  afficher-barre-defilement="true"
  class="m-responsive-table"
  current-scroll-left="0"
  degrade-gauche-actif="true"
  largeur-minimale="1000px"
>
  <table
    cellspacing="0"
    id="idTable"
  >
    <thead
      class="m-table-head m--is-head-style-light"
    >
      <tr>
        <th
          class="m--is-sorted m--is-text-align-left"
          id="name-idTable"
          scope="col"
        >
          <div>
            Name
          </div>
        </th>
        <th
          class="m--is-text-align-center"
          id="id-idTable"
          scope="col"
        >
          <div>
            Id
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="email-idTable"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="dateOfBirth-idTable"
          scope="col"
        >
          <div>
            Date of birth
          </div>
        </th>
        <th
          class="m--is-text-align-left"
          id="phoneNumber-idTable"
          scope="col"
        >
          <div>
            Phone number
          </div>
        </th>
      </tr>
    </thead>
     
    <tr
      class="m-responsive-table__waiting"
    >
      <td
        colspan="5"
      >
        <div
          class="m-progress m--is-indeterminate m--is-in-progress"
          style="height: 6px; border-radius: initial; left: 0px; width: 100%;"
        >
          <div
            class="m-progress__bar"
            style="width: 0%; border-bottom-left-radius: initial; border-top-left-radius: initial;"
          />
           
          <!---->
        </div>
      </td>
    </tr>
     
    <tbody
      class="m-table-group m--no-header m--has-row-highlighted-on-hover m--is-rows-style-alternate-background"
    >
      <!---->
       
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left add-custom-class-cell"
          scope="row"
        >
          
                                Vincent Guilmette
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 222 333
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                vincent.gui@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1976-12-05
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 232-3754
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Charles Maheu
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                111 322 344
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                charles.maheu@outlook.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1980-06-11
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                418 233-4744
                            
        </td>
      </tr>
      <tr>
        <th
          class="m-table-group__cell m--is-text-align-left"
          scope="row"
        >
          
                                Pierre Olivier Boulet
                            
        </th>
        <td
          class="m-table-group__cell m--is-text-align-center"
        >
          
                                112 528 967
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                po.boulet@gmail.com
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                1994-04-08
                            
        </td>
        <td
          class="m-table-group__cell m--is-text-align-left"
        >
          
                                819 135-3460
                            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</mpo-defilement-horizontal-automatique>
`;
